# P-Engine

./: .clang-format  .gitignore  AnimatedModelDemoREADME.md  CMakeLists.txt  LICENSE  README.md  compile_commands.json  imgui.ini
src/: CMakeLists.txt  main.cpp
src/Application/: Application.hpp
src/Application/EngineMode/: EngineMode.hpp
src/Application/EngineMode/AnimatedModelDemoMode/: AnimatedModelDemoMode.hpp
src/Application/EngineMode/CoreMenuEngineMode/: CoreMenuEngineMode.cpp  CoreMenuEngineMode.hpp
src/Application/ThreadPool/: ThreadPool.hpp
src/Application/ThreadPool/Job/: Job.cpp  Job.hpp
src/Application/ThreadPool/JobQueue/: JobQueue.cpp  JobQueue.hpp
src/Application/ThreadPool/PThreadPool/: PThreadPool.cpp  PThreadPool.hpp
src/Application/ThreadPool/Thread/: Thread.cpp  Thread.hpp
src/EngineCore/: EngineCore.hpp
src/EngineCore/EngineMode/: EngineMode.hpp
src/EngineCore/EngineMode/PEngineMode/: PEngineMode.cpp  PEngineMode.hpp
src/EngineCore/PEngineCore/: PEngineCore.cpp  PEngineCore.hpp
src/EngineCore/ThreadPool/: ThreadPool.hpp
src/EngineCore/ThreadPool/PThreadPool/: PThreadPool.cpp  PThreadPool.hpp
src/EngineCore/utilities/RawDataContainer/: RawDataContainer.cpp  RawDataContainer.hpp
src/EngineCore/utilities/UniqueIdentifier/: UniqueIdentifier.cpp  UniqueIdentifier.hpp
src/GraphicsEngine/: GraphicsEngine.hpp
src/GraphicsEngine/Backend/: Backend.hpp
src/GraphicsEngine/Backend/ApplicationContext/: ApplicationContext.hpp
src/GraphicsEngine/Backend/FrameExecutionController/: FrameExecutionController.hpp
src/GraphicsEngine/Backend/PBackend/: PBackend.cpp  PBackend.hpp
src/GraphicsEngine/Backend/Renderer/: Renderer.hpp
src/GraphicsEngine/Backend/VulkanBackend/: VulkanBackend.cpp  VulkanBackend.hpp
src/GraphicsEngine/GraphicsIR/: GirGenerator.hpp  GraphicsIntermediateRepresentation.hpp
src/GraphicsEngine/GraphicsIR/CameraGIR/: CameraGIR.hpp
src/GraphicsEngine/GraphicsIR/DrawAttachmentIR/: DrawAttachmentIR.hpp
src/GraphicsEngine/GraphicsIR/GraphicsPipelineIR/: GraphicsPipelineIR.hpp
src/GraphicsEngine/GraphicsIR/RenderGraphIR/: RenderGraphIR.hpp
src/GraphicsEngine/GraphicsIR/RenderPassIR/: RenderPassIR.hpp
src/GraphicsEngine/GraphicsIR/ResourceIR/: ResourceIR.hpp
src/GraphicsEngine/GraphicsIR/ShaderModuleIR/: ShaderModuleIR.hpp
src/GraphicsEngine/GraphicsIR/VertexAttributeIR/: VertexAttributeIR.hpp
src/GraphicsEngine/GraphicsIR/VertexInputBindingIR/: VertexInputBindingIR.hpp
src/GraphicsEngine/PGraphicsEngine/: PGraphicsEngine.cpp  PGraphicsEngine.hpp
src/GraphicsEngine/Scene/: Scene.cpp  Scene.hpp
src/GraphicsEngine/Scene/Camera/: Camera.hpp
src/GraphicsEngine/Scene/Light/: PointLight.hpp
src/GraphicsEngine/Scene/PScene/: PScene.cpp  PScene.hpp
src/GraphicsEngine/Scene/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp
src/GraphicsEngine/Scene/SceneRenderGraph/: SceneRenderGraph.hpp
src/GraphicsEngine/Scene/SceneResources/: SceneResource.hpp
src/GraphicsEngine/Scene/SceneSpace/: SceneSpace.hpp
src/GraphicsEngine/Scene/SceneView/: SceneView.hpp
src/GraphicsEngine/Scene/ShaderModule/: ShaderModule.hpp
src/GraphicsEngine/Scene/SwapchainRenderTarget/: SwapchainRenderTarget.hpp
src/components/: Component.cpp
src/core/: PEngineCore.cpp
src/core/engine_mode/: CoreMenuMode.cpp  PEngineMode.cpp
src/core/engine_tools/: EngineTool.cpp
src/core/p_render/: PRender.cpp  VulkanMemoryAllocator.cpp
src/core/p_render/backend/: Context.cpp  PhysicalPass.cpp
src/core/p_render/render_graph/: RenderGraph.cpp  Shader.cpp
src/core/p_render/scene/: Scene.cpp
src/core/p_render/shaders/: testFrag.frag  testVert.vert
src/core/thread_pool/: Thread.cpp  ThreadPool.cpp
src/core/thread_pool/job_queue/: JobQueue.cpp
src/core/utils/: UniqueID.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/lib/bs_thread_pool/: BS_thread_pool.hpp
src/lib/dear_imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/lib/glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
src/lib/glm/detail/: _features.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_trigonometric.inl  func_vector_relational.inl  func_vector_relational_simd.inl  (+37 more)
src/lib/murmur3/: MurmurHash3.cpp  MurmurHash3.hpp
src/lib/spirv_reflect/: spirv_reflect.c  spirv_reflect.h
src/lib/vk_mem_alloc/: vk_mem_alloc.cpp  vk_mem_alloc.h
src/mesh_optimizer/: allocator.cpp  clusterizer.cpp  indexcodec.cpp  indexgenerator.cpp  overdrawanalyzer.cpp  overdrawoptimizer.cpp  simplifier.cpp  spatialorder.cpp  stripifier.cpp  vcacheanalyzer.cpp  vcacheoptimizer.cpp  vertexcodec.cpp  vertexfilter.cpp  vfetchanalyzer.cpp  vfetchoptimizer.cpp
src/shaders/: DemoFragmentShader.frag  DemoVertexShader.vert  SHADERS_README.md  testFragShader.frag  testVertShader.vert
src/spirv_reflect/: spirv_reflect.c
src/utilities/ByteArray/: ByteArray.cpp  ByteArray.hpp
src/utilities/GuiWidget/: GuiWidget.hpp  Table.hpp
src/utilities/Hash/: Hash.hpp  HashedObject.hpp
src/utilities/IntrusiveHashMap/: IntrusiveHashMap.hpp
src/utilities/IntrusiveList/: IntrusiveList.hpp
src/utilities/ObjectHashPool/: ObjectHashPool.hpp
src/utilities/RawDataContainer/: RawDataContainer.cpp  RawDataContainer.hpp
src/utilities/UniqueIdentifier/: UniqueIdentifier.cpp  UniqueIdentifier.hpp
src/utilities/assimp/: AssimpData.hpp  SceneImporter.cpp  SceneImporter.hpp  SkeletalAnimation.cpp  SkeletalAnimation.hpp
src/vulkan/vulkan_functions/: VulkanFunctions.cpp
(+768 files in other folders)
